src/test/deca/syntax/valid/test_include.deca
#include "class_included.deca"

{
	Animal Cheval = new Animal();
	Cheval.affichePattes();

}