src/test/deca/syntax/invalid/include_notFound.deca
#include "include.deca"
{
	print("ok");
}